fix nanopub guidelines URL, and change color for slightly lighter grey to make it more readable

--- a/src/css/customTheme.css
+++ b/src/css/customTheme.css
@@ -1,11 +1,11 @@
 :root {
-  --ifm-color-primary: #5e5c64;
-  --ifm-color-primary-dark: #55535a;
-  --ifm-color-primary-darker: #504e55;
-  --ifm-color-primary-darkest: #424046;
-  --ifm-color-primary-light: #67656e;
-  --ifm-color-primary-lighter: #6c6a73;
-  --ifm-color-primary-lightest: #7a7882;
+  --ifm-color-primary: #77767b;
+  --ifm-color-primary-dark: #6b6a6f;
+  --ifm-color-primary-darker: #656469;
+  --ifm-color-primary-darkest: #535356;
+  --ifm-color-primary-light: #838287;
+  --ifm-color-primary-lighter: #89888d;
+  --ifm-color-primary-lightest: #9b9b9f;
 }
 /* Change color here: https://docusaurus.io/docs/styling-layout#styling-your-site-with-infima
 */
